0.16
 - Add DateTime::Event::Random to SEE ALSO section in doc.
 - Add check for parameters 'dt_from' <= 'dt_to'.

0.15 2024-06-13T23:57:22+02:00
 - Add check for 'dt_from' and 'dt_to' parameters.
 - Fix dependencies.
 - Improve doc.
 - Move functional test to begin.

0.14 2024-03-16T14:13:15+01:00
 - Add missing random_day_year() method.
 - Add tests to coverage of Random::Day::get().
 - Fix error message in doc.
 - Improve constructor doc.
 - Regen README file.
 - Update Module::Install to 1.21 version.
 - Update copyright years.

0.13 2023-01-26T19:13:52+01:00
 - Add check for year in interval of 'dt_from' and 'dt_to' in
   random_year().
 - Add check for year/month in interval of 'dt_from' and 'dt_to' in
   random_year_month().
 - Add check for year/month/day in interval of 'dt_from' and 'dt_to' in
   random_year_month_day().
 - Add Random::Day::InTheFuture object.
 - Add Random::Day::InThePast object.
 - Fix test dependencies.
 - Remove obsolete code from t/Random-Day/05-random.t .

0.12 2023-01-26T11:46:23+01:00
 - Rename example to better name.
 - Update copyright years.

0.11 2022-07-09T17:13:47+02:00
 - Add blank lines to code after arguments processing and before return.
 - Add tests for random_month_year() method.
 - Fix random_month_year() method. There were issue with creating before
   date. e.g. for February 2022.
 - Update copyright years.

0.10 2021-01-27T19:21:56+01:00
 - Fix bugtracker.
 - Update copyright years.

0.09 2020-01-14T00:28:19+01:00
 - Add test for random_year() method.
 - Change =item to =head2 in METHODS section in doc.
 - Update Module::Install to 1.19 version.
 - Update copyright years.
 - Update my github user name.

0.08 2018-10-11T16:53:50+02:00
 - Code optimalization - to simple quotes.
 - Remove verbatim from POD doc.
 - Update copyright years.

0.07 2018-02-07T07:48:16+01:00
 - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.

0.06 2017-12-26T11:15:17+01:00