@@ -1,6 +1,7 @@
 0.16
  - Add DateTime::Event::Random to SEE ALSO section in doc.
  - Add check for parameters 'dt_from' <= 'dt_to'.
+ - Fix random_month() select of year.
 
 0.15 2024-06-13T23:57:22+02:00
  - Add check for 'dt_from' and 'dt_to' parameters.
